[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "neo4j>=5.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.3",
    "pydantic>=2.11.5",
    "fastapi>=0.115.9",
    "uvicorn>=0.34.3",
    "python-multipart>=0.0.20",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "starlette>=0.45.3",
    "psycopg2-binary>=2.9.10",
]
